# crisp

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  grammar.pest  main.go  parsing.go  test.crisp  test.crs  tokens.go
.github/workflows/: publish_cargo.yml
crisp-aot/: Cargo.toml
crisp-jit/: Cargo.toml
crisp-macro/: Cargo.toml  README.md
crisp-macro/src/: lib.rs
crisp-runtime/: Cargo.toml  README.md
crisp-runtime/src/: lib.rs
crisp-runtime/src/mop/: mod.rs
crisp-runtime/src/parsing/: grammar.pest  mod.rs
src/: cli.rs  grammar.pest  lib.rs  main.rs  types.rs
src/analysis/: mod.rs  scope.rs  structure.rs
src/parsing/: ast.rs  ast_old.rs  mod.rs  types.rs
src/parsing/ast/: mod.rs  nodes.rs  validation.rs
tests/: basic.rs  structure.rs
tests/structure/: assignment.rs  for_loop.rs  function.rs  helpers.rs  if_statement.rs  mod.rs
