[package]
name = "crisp"
authors = ["Glenn Wallace glennw-coding@proton.me"]
description = "Placeholder for Rusty Lisp."
version = "0.0.1"
edition = "2024"
keywords = ["lisp", "repl", "programming-language", "crisp"]
categories = ["parser-implementations", "compilers"]
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/Stack-Syndicate/crisp"

[dependencies]

