[package]
name = "crisp"
authors = ["Glenn Wallace <glennw-coding@proton.me>"]
description = "A small, expressive Lisp-inspired programming language."
version = "0.1.2"
edition = "2024"
keywords = ["compiler", "interpreter", "lisp", "programming-language"]
categories = ["compilers", "parser-implementations"]
license = "MIT"
repository = "https://codeberg.org/Stack-Syndicate/crisp"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
env_logger = { version = "0.11.10", features = ["color"] }
log = "0.4.29"
pest = "2.8.4"
pest_derive = "2.8.4"

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.4.0"
