[package]
name = "crisp-runtime"
authors = ["Glenn Wallace glennw-coding@proton.me"]
description = "A runtime for the lisp-like programming language Crisp which (one day!) integrates seamlessly with C/C++ and Rust libraries."
version = "0.0.6"
edition = "2024"
keywords = ["lisp", "repl", "programming-language", "crisp"]
categories = ["parser-implementations", "compilers"]
license = "MIT"
repository = "https://github.com/Stack-Syndicate/crisp"

[dependencies]
pest = "2.8.1"
pest_derive = "2.8.1"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }